# loud_speaker

./: .gitignore  CMakeLists.txt  README.md  init.m
codegen/lib/get_ekf/: get_ekf.c  get_ekf.h  get_ekf_rtw.mk  get_ekf_types.h  rtw_proj.tmw  rtwtypes.h
data/: reference_parameters.txt
fig/: K_m.fig  R_e.fig  R_m.fig  measurements.fig
functions/ekf/: get_ekf.m  get_ekf_iteration.m  get_prediction.m
functions/generate/: fix_generated_file.m  get_matrix_to_table.m  get_vector_to_struct.m  write_symbolic_vector_info_getter.m
functions/rk4/: get_model_handle.m  get_model_step.m  get_simulate_no_persist.m
model/: ctrl_struct_initializer.m  dstate_struct_initializer.m  filter_parameters_struct_initializer.m  get_R_e_measurement.m  get_ctrl_info.m  get_dstate_info.m  get_ii_measurement.m  get_parameters_info.m  get_prediction_jacobians.m  get_state_info.m  get_symgen_step_loud_speaker_identification.m  get_symgen_step_loud_speaker_identification_full.m  get_symgen_step_loud_speaker_simple.m  loudspeaker_symbolic_model.m  loudspeaker_symbolic_model_identification.m  loudspeaker_symbolic_model_identification_full.m  loudspeaker_symbolic_model_simple.m  parameters_initializer.m  state_names_initializer.m  state_struct_initializer.m
scripts/: import_test_results.m  loudspeaker_codegen.m  loudspeaker_get_logged_data.m  loudspeaker_parameters_identification.m  loudspeaker_parameters_identification_full.m  loudspeaker_parameters_simple.m  loudspeaker_read_test_data.m  loudspeaker_rebuild.m  loudspeaker_test_model.m
src/: ekf_test.cpp
(+6 files in other folders)
